# dioxus-intellij

./: .gitignore  .mise.toml  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  release-please-config.json  settings.gradle.kts
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  code-quality.yml  qodana.yml  release-please.yml
.run/: Run Plugin.run.xml
native/: Cargo.toml
native/src/: lib.rs
rust/: Cargo.toml  Cross.toml
rust/src/: lib.rs
src/integrationTest/kotlin/com/dioxuslabs/dioxus/: DioxusIntegrationTest.kt
src/integrationTest/resources/rust-project/: Cargo.toml
src/integrationTest/resources/rust-project/src/: main.rs
src/main/kotlin/com/dioxuslabs/dioxus/: DioxusPluginDisposable.kt
src/main/kotlin/com/dioxuslabs/dioxus/actions/: DioxusCheckOnSaveAction.kt
src/main/kotlin/com/dioxuslabs/dioxus/native/: DioxusIntellij.kt
src/test/kotlin/com/dioxuslabs/dioxus/actions/: DioxusActionOnSaveTest.kt
src/test/kotlin/com/dioxuslabs/dioxus/native/: DioxusIntellijTest.kt
src/test/kotlin/org/rust/cargo/project/model/impl/: TestCargoProjectsServiceImpl.kt
