[package]
name = "dioxus-intellij"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus-autofmt = "0.5.1"

[lib]
crate-type = ["cdylib"]
name = "dioxus"

[target.aarch64-apple-darwin]
image = "ghcr.io/atty303/aarch64-apple-darwin-cross:latest"

[target.x86_64-apple-darwin]
image = "ghcr.io/atty303/x86_64-apple-darwin-cross:latest"
